--- a/manifest.json
+++ b/manifest.json
@@ -2,26 +2,30 @@
     "name": "simulator.io - save fix",
     "version": "0.1",
     "description": "An extension that provides easier save functionality for simulator.io since the built in functionality is broken.",
-    "permissions": ["storage"],
+    "permissions": ["storage", "declarativeContent", "activeTab"],
     "background": {
         "scripts": ["js/background.js"],
         "persistent": false
     },
     "page_action": {
-        "default_popup": "popup.html"/*,
+        "default_popup": "popup.html",
         "default_icon": {
-            "16": "",
-            "32": "",
-            "48": "",
-            "128": ""
-        }*/
+            "16": "images/logo16.png",
+            "32": "images/logo32.png",
+            "48": "images/logo48.png",
+            "128": "images/logo128.png"
+        }
     },
+    "content_scripts": [{
+        "matches": ["*://simulator.io/board"],
+        "js": ["js/jquery-3.2.1.min.js", "js/contentScript.js"]
+    }],
     "options_page": "options.html",
-    /*"icons": {
-        "16": "",
-        "32": "",
-        "48": "",
-        "128": ""
-    },*/
+    "icons": {
+        "16": "images/logo16.png",
+        "32": "images/logo32.png",
+        "48": "images/logo48.png",
+        "128": "images/logo128.png"
+    },
     "manifest_version": 2
 }
