--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "simulator.io - save fix",
     "version": "0.1",
     "description": "An extension that provides easier save functionality for simulator.io since the built in functionality is broken.",
-    "permissions": ["storage", "declarativeContent", "activeTab"],
+    "permissions": ["storage", "activeTab"],
     "background": {
         "scripts": ["js/jquery-3.2.1.min.js", "js/background.js"],
         "persistent": false
@@ -26,7 +26,6 @@
             "js": ["js/jquery-3.2.1.min.js", "js/contentScriptHome.js"]
         }
     ],
-    "options_page": "options.html",
     "icons": {
         "16": "images/logo16.png",
         "32": "images/logo32.png",
